ARR Stack/sabnzbd/sabnzbd.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: arr-stack
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: arr-stack
spec:
  selector:
    matchLabels:
      app: sabnzbd
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - name: sabnzbd
        image: lscr.io/linuxserver/sabnzbd:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits: 
            memory: "512Mi"
            cpu: "250m" 
        ports: 
          - containerPort: 8080
        volumeMounts:
        - mountPath: /config
          name: data
        - mountPath: /data
          name: smb
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: sabnzbd-claim
      - name: smb
        persistentVolumeClaim:
          claimName: sabnzbd-smb
