ARR Stack/sabnzbd/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: arr-stack
spec:
  selector:
    app: sabnzbd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
