ARR Stack/sabnzbd/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd-ingress
  namespace: arr-stack
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sabnzbd.kbtech.org`)
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
